[project]
name = "price-loaders"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "prem", email = "prem.ch@ku.th" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "websocket-client>=1.8.0",
    "websocket>=0.2.1",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
get-kbank = "price_loaders.tradingview:get_kbank"
